<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <data>
        <variable name="viewmodel"
                  type="com.abdulmateen.innowave.ui.home.profile.ProfileViewModel"
        />

    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.profile.ProfileFragment">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

        <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_10">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:background="@color/colorPrimary"  >

                <com.mikhaellopez.circularimageview.CircularImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        app:civ_border_color="#3f51b5"
                        app:civ_shadow="true"
                        android:layout_marginTop="25dp"
                        app:civ_border="true"
                        app:civ_shadow_radius="0"
                        app:civ_shadow_color="#3f51b5"
                        app:avatar_url="@{String.valueOf(viewmodel.user.avatar_url)}" />

                <TextView
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/user_name"
                        android:text="@{viewmodel.user.name}"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
            </LinearLayout>
<androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">
        <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@color/deep_orange_A700"
                    android:textSize="18sp"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:textColor="@color/cyan_400"
                    android:text="@{String.valueOf(viewmodel.user.followers)}"/>

        </LinearLayout>
        <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@color/blue_900"
                    android:textSize="18sp"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:textColor="@color/cyan_400"
                    android:text="@{String.valueOf(viewmodel.user.following)}"/>

        </LinearLayout>
        <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repos"
                    android:textSize="18sp"
                    android:textColor="@color/green_900"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:textColor="@color/cyan_400"
                    android:text="@{String.valueOf(viewmodel.user.public_repos)}"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="45dp"
                    android:background="#fff">
                <LinearLayout
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">
                    <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_email"/>
                    <TextView
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:hint="@string/email"
                            android:text="@{viewmodel.user.email}"
                            android:layout_marginRight="5dp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_web"/>
                    <TextView
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            tools:text="@string/profile_url"
                            android:hint="@string/profile_url"
                            android:text="@{viewmodel.user.html_url}"
                            android:layout_marginRight="5dp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_business"/>
                    <TextView
                            android:textStyle="bold"

                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            tools:text="@string/company"
                            android:text="@{viewmodel.user.company}"
                            android:hint="@string/company"
                            android:layout_marginRight="5dp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_my_location"/>
                    <TextView
                            android:textStyle="bold"

                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            tools:text="@string/address"
                            android:hint="@string/address"
                            android:text="@{viewmodel.user.location}"
                            android:layout_marginRight="5dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        </ScrollView>
    </FrameLayout>
</layout>
